--- a/shopsphere_web/package.json
+++ b/shopsphere_web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "@supabase/supabase-js": "^2.47.10",
     "heroicons": "^2.2.0",
     "next": "15.1.2",
