add npm start command

--- a/shopsphere_api/package.json
+++ b/shopsphere_api/package.json
@@ -4,7 +4,8 @@
   "description": "back-end for shopsphere web application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "docker desktop start && supabase start && supabase status"
   },
   "author": "Brian Caldera",
   "license": "MIT",
